--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOy8I+PZ9SaK/cG7utvH866",
+      "authorship_tag": "ABX9TyORRrQ1EzWbe9/VoV6YODOK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/go23man/Study/blob/master/yolov3_webcam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/go23man/study_project/blob/master/project/yolov3_webcam.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -489,6 +489,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yb2p3VXxG5N_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Produce bounding boxes from the YOLO model, but does not draw it right into the input image. <br/> Draw the bounding boxes into an empty canvas with RGBA format (.png), so we can get an image of bounding boxes with no background."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AFQyq3TSBGGH",
@@ -517,6 +527,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qVF2S8_lGY7i",
+        "colab_type": "text"
+      },
+      "source": [
+        "Put predicted bounding box into our realtime webcam show"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "_pqB0d5WBK11",
@@ -540,6 +560,20 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C3fn80IxFBXu",
+        "colab_type": "text"
+      },
+      "source": [
+        "**start_input** -> to open webcam and show webcam </br>\n",
+        "**take_photo** -> get image from webcam and put bounding boxes overlay </br>\n",
+        "**js_reply_to_image** -> convert image from JS output into an array </br>\n",
+        "**get_drawing_array** -> get predicted bounding box from the image array </br>\n",
+        "**drawing_array_to_bytes** -> convert predicted bounding box into bytes </br>"
+      ]
     }
   ]
 }
