Colaboratory를 통해 생성됨

--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORRrQ1EzWbe9/VoV6YODOK",
+      "authorship_tag": "ABX9TyM1nHiGc80zDRYqbkhA++GN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -568,11 +568,11 @@
         "colab_type": "text"
       },
       "source": [
-        "**start_input** -> to open webcam and show webcam </br>\n",
-        "**take_photo** -> get image from webcam and put bounding boxes overlay </br>\n",
-        "**js_reply_to_image** -> convert image from JS output into an array </br>\n",
-        "**get_drawing_array** -> get predicted bounding box from the image array </br>\n",
-        "**drawing_array_to_bytes** -> convert predicted bounding box into bytes </br>"
+        "**start_input** -> to open webcam and show webcam <br/>\n",
+        "**take_photo** -> get image from webcam and put bounding boxes overlay <br/>\n",
+        "**js_reply_to_image** -> convert image from JS output into an array <br/>\n",
+        "**get_drawing_array** -> get predicted bounding box from the image array <br/>\n",
+        "**drawing_array_to_bytes** -> convert predicted bounding box into bytes <br/>"
       ]
     }
   ]
