Colaboratory를 통해 생성됨

--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM1nHiGc80zDRYqbkhA++GN",
+      "authorship_tag": "ABX9TyNj3JMedEISNkIefDrTSIHX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,7 +176,7 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
-        "outputId": "5242d952-5e5c-40de-c3ca-b03ee0ec4df0"
+        "outputId": "987c719d-d17b-4dea-df79-02589ea69c8c"
       },
       "source": [
         "start_input()\n",
@@ -202,7 +202,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,7 +363,7 @@
         "\n",
         "    return image_array"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 193
         },
-        "outputId": "0370ac18-2cc2-4bcc-a6b8-f23b21c3dd6d"
+        "outputId": "7b8399b2-832c-43d3-ae79-7c4b8d1bf6d1"
       },
       "source": [
         "!git clone https://github.com/ultralytics/yolov3  # clone\n",
@@ -387,6 +387,8 @@
         "from models import *\n",
         "from utils.datasets import *\n",
         "from utils.utils import *\n",
+        "from absl.flags import FLAGS\n",
+        "from absl import app, flags, logging\n",
         "\n",
         "parser = argparse.ArgumentParser()\n",
         "parser.add_argument('--cfg', type=str, default='cfg/yolov3-spp.cfg', help='*.cfg path')\n",
@@ -418,7 +420,7 @@
         "names = load_classes(opt.names)\n",
         "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,11 +430,11 @@
             "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
             "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
             "remote: Total 9440 (delta 0), reused 2 (delta 0), pack-reused 9437\u001b[K\n",
-            "Receiving objects: 100% (9440/9440), 7.82 MiB | 28.20 MiB/s, done.\n",
+            "Receiving objects: 100% (9440/9440), 7.82 MiB | 31.66 MiB/s, done.\n",
             "Resolving deltas: 100% (6466/6466), done.\n",
             "/content/yolov3\n",
             "Model Summary: 225 layers, 6.29987e+07 parameters, 6.29987e+07 gradients\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.0s)\n"
+            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (3.2s)\n"
           ],
           "name": "stdout"
         }
@@ -485,7 +487,7 @@
         "\n",
         "    return drawing_array"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -523,13 +525,13 @@
         "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "    return drawing_bytes"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qVF2S8_lGY7i",
+        "id": "EjWNWe9mH5bq",
         "colab_type": "text"
       },
       "source": [
@@ -539,27 +541,225 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_pqB0d5WBK11",
+        "id": "FjpykLlBHsjv",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b080567c-2185-4f3d-a6f2-61ff0c7e7cae"
       },
       "source": [
+        "from google.colab import drive\n",
+        "from google.colab import files\n",
+        "drive.mount('/content/gdrive')\n",
+        "!ls /content/gdrive/"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n",
+            "'My Drive'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QzbT6gmvH9_A",
+        "colab_type": "text"
+      },
+      "source": [
+        "Link with Google Drive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_pqB0d5WBK11",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "613a59af-4c7f-4f03-dc90-152d1dfcd38a"
+      },
+      "source": [
+        "from datetime import datetime\n",
+        "from io import BytesIO\n",
+        "from base64 import b64decode\n",
+        "\n",
         "start_input()\n",
         "label_html = 'Capturing...'\n",
         "img_data = ''\n",
         "count = 0 \n",
+        "\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/output.avi', fourcc, 1.0, (512, 512))\n",
+        "\n",
         "while True:\n",
         "    js_reply = take_photo(label_html, img_data)\n",
         "    if not js_reply:\n",
         "        break\n",
         "\n",
         "    image = js_reply_to_image(js_reply)\n",
-        "    drawing_array = get_drawing_array(image) \n",
+        "    drawing_array = get_drawing_array(image)\n",
         "    drawing_bytes = drawing_array_to_bytes(drawing_array)\n",
-        "    img_data = drawing_bytes"
+        "    img_data = drawing_bytes\n",
+        "    \n",
+        "    \n",
+        "\n",
+        "    drawing_array = cv2.cvtColor(drawing_array, cv2.COLOR_RGBA2BGR)\n",
+        "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR) \n",
+        "\n",
+        "    writer.write(image + drawing_array)\n",
+        "\n",
+        "writer.release()\n",
+        "cv2.destroyAllWindows()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "    var video;\n",
+              "    var div = null;\n",
+              "    var stream;\n",
+              "    var captureCanvas;\n",
+              "    var imgElement;\n",
+              "    var labelElement;\n",
+              "    \n",
+              "    var pendingResolve = null;\n",
+              "    var shutdown = false;\n",
+              "    \n",
+              "    function removeDom() {\n",
+              "       stream.getVideoTracks()[0].stop();\n",
+              "       video.remove();\n",
+              "       div.remove();\n",
+              "       video = null;\n",
+              "       div = null;\n",
+              "       stream = null;\n",
+              "       imgElement = null;\n",
+              "       captureCanvas = null;\n",
+              "       labelElement = null;\n",
+              "    }\n",
+              "    \n",
+              "    function onAnimationFrame() {\n",
+              "      if (!shutdown) {\n",
+              "        window.requestAnimationFrame(onAnimationFrame);\n",
+              "      }\n",
+              "      if (pendingResolve) {\n",
+              "        var result = \"\";\n",
+              "        if (!shutdown) {\n",
+              "          captureCanvas.getContext('2d').drawImage(video, 0, 0, 512, 512);\n",
+              "          result = captureCanvas.toDataURL('image/jpeg', 0.8)\n",
+              "        }\n",
+              "        var lp = pendingResolve;\n",
+              "        pendingResolve = null;\n",
+              "        lp(result);\n",
+              "      }\n",
+              "    }\n",
+              "    \n",
+              "    async function createDom() {\n",
+              "      if (div !== null) {\n",
+              "        return stream;\n",
+              "      }\n",
+              "      div = document.createElement('div');\n",
+              "      div.style.border = '2px solid black';\n",
+              "      div.style.padding = '3px';\n",
+              "      div.style.width = '100%';\n",
+              "      div.style.maxWidth = '600px';\n",
+              "      document.body.appendChild(div);\n",
+              "      \n",
+              "      const modelOut = document.createElement('div');\n",
+              "      modelOut.innerHTML = \"<span>Status:</span>\";\n",
+              "      labelElement = document.createElement('span');\n",
+              "      labelElement.innerText = 'No data';\n",
+              "      labelElement.style.fontWeight = 'bold';\n",
+              "      modelOut.appendChild(labelElement);\n",
+              "      div.appendChild(modelOut);\n",
+              "           \n",
+              "      video = document.createElement('video');\n",
+              "      video.style.display = 'block';\n",
+              "      video.width = div.clientWidth - 6;\n",
+              "      video.setAttribute('playsinline', '');\n",
+              "      video.onclick = () => { shutdown = true; };\n",
+              "      stream = await navigator.mediaDevices.getUserMedia(\n",
+              "          {video: { facingMode: \"environment\"}});\n",
+              "      div.appendChild(video);\n",
+              "      imgElement = document.createElement('img');\n",
+              "      imgElement.style.position = 'absolute';\n",
+              "      imgElement.style.zIndex = 1;\n",
+              "      imgElement.onclick = () => { shutdown = true; };\n",
+              "      div.appendChild(imgElement);\n",
+              "      \n",
+              "      const instruction = document.createElement('div');\n",
+              "      instruction.innerHTML = \n",
+              "          '<span style=\"color: red; font-weight: bold;\">' +\n",
+              "          'When finished, click here or on the video to stop this demo</span>';\n",
+              "      div.appendChild(instruction);\n",
+              "      instruction.onclick = () => { shutdown = true; };\n",
+              "      \n",
+              "      video.srcObject = stream;\n",
+              "      await video.play();\n",
+              "      captureCanvas = document.createElement('canvas');\n",
+              "      captureCanvas.width = 512; //video.videoWidth;\n",
+              "      captureCanvas.height = 512; //video.videoHeight;\n",
+              "      window.requestAnimationFrame(onAnimationFrame);\n",
+              "      \n",
+              "      return stream;\n",
+              "    }\n",
+              "    async function takePhoto(label, imgData) {\n",
+              "      if (shutdown) {\n",
+              "        removeDom();\n",
+              "        shutdown = false;\n",
+              "        return '';\n",
+              "      }\n",
+              "      var preCreate = Date.now();\n",
+              "      stream = await createDom();\n",
+              "      \n",
+              "      var preShow = Date.now();\n",
+              "      if (label != \"\") {\n",
+              "        labelElement.innerHTML = label;\n",
+              "      }\n",
+              "            \n",
+              "      if (imgData != \"\") {\n",
+              "        var videoRect = video.getClientRects()[0];\n",
+              "        imgElement.style.top = videoRect.top + \"px\";\n",
+              "        imgElement.style.left = videoRect.left + \"px\";\n",
+              "        imgElement.style.width = videoRect.width + \"px\";\n",
+              "        imgElement.style.height = videoRect.height + \"px\";\n",
+              "        imgElement.src = imgData;\n",
+              "      }\n",
+              "      \n",
+              "      var preCapture = Date.now();\n",
+              "      var result = await new Promise(function(resolve, reject) {\n",
+              "        pendingResolve = resolve;\n",
+              "      });\n",
+              "      shutdown = false;\n",
+              "      \n",
+              "      return {'create': preShow - preCreate, \n",
+              "              'show': preCapture - preShow, \n",
+              "              'capture': Date.now() - preCapture,\n",
+              "              'img': result};\n",
+              "    }\n",
+              "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
