--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNj3JMedEISNkIefDrTSIHX",
+      "authorship_tag": "ABX9TyMCdQY+caCkDkNqoNv8JIjE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mgF3IWYbAR8H",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mgF3IWYbAR8H"
       },
       "source": [
         "import base64\n",
@@ -176,19 +174,18 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MBHU-JdmAkcL",
-        "colab_type": "code",
+        "outputId": "aa42cb64-340a-484a-a6d8-c5710d1d8227",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "987c719d-d17b-4dea-df79-02589ea69c8c"
+        }
       },
       "source": [
         "start_input()\n",
@@ -202,7 +199,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,9 +342,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "n6saeip9AyGL",
-        "colab_type": "code",
-        "colab": {}
+        "id": "n6saeip9AyGL"
       },
       "source": [
         "def js_reply_to_image(js_reply):\n",
@@ -363,19 +358,17 @@
         "\n",
         "    return image_array"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9yoO2J3CA4UP",
-        "colab_type": "code",
+        "outputId": "c32c87bf-78be-432d-96ed-729afe397756",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "outputId": "7b8399b2-832c-43d3-ae79-7c4b8d1bf6d1"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!git clone https://github.com/ultralytics/yolov3  # clone\n",
@@ -420,7 +413,7 @@
         "names = load_classes(opt.names)\n",
         "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,11 +423,11 @@
             "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
             "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
             "remote: Total 9440 (delta 0), reused 2 (delta 0), pack-reused 9437\u001b[K\n",
-            "Receiving objects: 100% (9440/9440), 7.82 MiB | 31.66 MiB/s, done.\n",
+            "Receiving objects: 100% (9440/9440), 7.82 MiB | 30.34 MiB/s, done.\n",
             "Resolving deltas: 100% (6466/6466), done.\n",
             "/content/yolov3\n",
             "Model Summary: 225 layers, 6.29987e+07 parameters, 6.29987e+07 gradients\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (3.2s)\n"
+            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.5s)\n"
           ],
           "name": "stdout"
         }
@@ -443,9 +436,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_GKs8nWtBA_h",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_GKs8nWtBA_h"
       },
       "source": [
         "def get_drawing_array(image_array): \n",
@@ -487,14 +478,13 @@
         "\n",
         "    return drawing_array"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Yb2p3VXxG5N_",
-        "colab_type": "text"
+        "id": "Yb2p3VXxG5N_"
       },
       "source": [
         "Produce bounding boxes from the YOLO model, but does not draw it right into the input image. <br/> Draw the bounding boxes into an empty canvas with RGBA format (.png), so we can get an image of bounding boxes with no background."
@@ -503,9 +493,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AFQyq3TSBGGH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AFQyq3TSBGGH"
       },
       "source": [
         "def drawing_array_to_bytes(drawing_array):\n",
@@ -525,14 +513,13 @@
         "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "    return drawing_bytes"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EjWNWe9mH5bq",
-        "colab_type": "text"
+        "id": "EjWNWe9mH5bq"
       },
       "source": [
         "Put predicted bounding box into our realtime webcam show"
@@ -542,12 +529,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FjpykLlBHsjv",
-        "colab_type": "code",
+        "outputId": "f0d5ca98-d24b-4959-9f53-b172921f474c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "b080567c-2185-4f3d-a6f2-61ff0c7e7cae"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from google.colab import drive\n",
@@ -555,7 +540,7 @@
         "drive.mount('/content/gdrive')\n",
         "!ls /content/gdrive/"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,8 +555,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QzbT6gmvH9_A",
-        "colab_type": "text"
+        "id": "QzbT6gmvH9_A"
       },
       "source": [
         "Link with Google Drive"
@@ -580,26 +564,109 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "4LC9pa2vrqX1",
+        "outputId": "5d60983b-01c2-4d17-f82f-1097708322c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "\n",
+        "project_id = 'vocal-oarlock-289106'\n",
+        "!gcloud config set project {project_id}\n",
+        "!gsutil ls\n",
+        "\n",
+        "bucket_name = 'hanium_bucket_201007'"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Updated property [core/project].\n",
+            "gs://hanium_bucket_201007/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HC-wPbB5rr2K"
+      },
+      "source": [
+        "Link with GCP"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JsaqI0KjaY9_",
+        "outputId": "61683335-2d9a-4461-f7aa-60f5fa4f3cb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo \"deb http://packages.cloud.google.com/apt gcsfuse-bionic main\" > /etc/apt/sources.list.d/gcsfuse.list\n",
+        "!curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -\n",
+        "!apt -qq update\n",
+        "!apt -qq install gcsfuse"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100   653  100   653    0     0  32650      0 --:--:-- --:--:-- --:--:-- 34368\n",
+            "OK\n",
+            "8 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+            "The following NEW packages will be installed:\n",
+            "  gcsfuse\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 8 not upgraded.\n",
+            "Need to get 4,278 kB of archives.\n",
+            "After this operation, 12.8 MB of additional disk space will be used.\n",
+            "Selecting previously unselected package gcsfuse.\n",
+            "(Reading database ... 144617 files and directories currently installed.)\n",
+            "Preparing to unpack .../gcsfuse_0.30.0_amd64.deb ...\n",
+            "Unpacking gcsfuse (0.30.0) ...\n",
+            "Setting up gcsfuse (0.30.0) ...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_pqB0d5WBK11",
-        "colab_type": "code",
+        "outputId": "fac82e79-da70-4caf-93e4-b01b065a462b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "613a59af-4c7f-4f03-dc90-152d1dfcd38a"
+          "height": 90
+        }
       },
       "source": [
         "from datetime import datetime\n",
         "from io import BytesIO\n",
         "from base64 import b64decode\n",
+        "import operator\n",
         "\n",
         "start_input()\n",
         "label_html = 'Capturing...'\n",
         "img_data = ''\n",
         "count = 0 \n",
         "\n",
+        "now = datetime.now()\n",
+        "snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
+        "\n",
         "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/output.avi', fourcc, 1.0, (512, 512))\n",
+        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/' + snow + '.avi', fourcc, 1.0, (512, 512))\n",
         "\n",
         "while True:\n",
         "    js_reply = take_photo(label_html, img_data)\n",
@@ -610,18 +677,31 @@
         "    drawing_array = get_drawing_array(image)\n",
         "    drawing_bytes = drawing_array_to_bytes(drawing_array)\n",
         "    img_data = drawing_bytes\n",
-        "    \n",
-        "    \n",
         "\n",
         "    drawing_array = cv2.cvtColor(drawing_array, cv2.COLOR_RGBA2BGR)\n",
-        "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR) \n",
+        "\n",
+        "    x = []\n",
+        "    y = []\n",
+        "    img = drawing_array[:,:,0] # convert to 2D array\n",
+        "    row, col = img.shape\n",
+        "    for i in range(row):\n",
+        "         for j in range(col):\n",
+        "             if img[i,j] != 0:\n",
+        "                 x.append(i) # get x indices\n",
+        "                 y.append(j) # get y indices\n",
+        "\n",
+        "    for i in range(len(x)):\n",
+        "         image[x[i],y[i]] = (0, 0, 0)\n",
+        "\n",
+        "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
         "\n",
         "    writer.write(image + drawing_array)\n",
         "\n",
         "writer.release()\n",
-        "cv2.destroyAllWindows()"
+        "cv2.destroyAllWindows()\n",
+        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/ gs://{bucket_name}"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -758,14 +838,22 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_7_14_27_10.avi [Content-Type=video/x-msvideo]...\n",
+            "/ [1 files][ 78.2 KiB/ 78.2 KiB]                                                \n",
+            "Operation completed over 1 objects/78.2 KiB.                                     \n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C3fn80IxFBXu",
-        "colab_type": "text"
+        "id": "C3fn80IxFBXu"
       },
       "source": [
         "**start_input** -> to open webcam and show webcam <br/>\n",
