Colaboratory를 통해 생성됨

--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCdQY+caCkDkNqoNv8JIjE",
+      "authorship_tag": "ABX9TyPD/hNX+dPchEXsSSg1IhOD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,14 +174,14 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MBHU-JdmAkcL",
-        "outputId": "aa42cb64-340a-484a-a6d8-c5710d1d8227",
+        "outputId": "ed3c79b4-35b7-41ae-fc4f-08394b06d0b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -199,7 +199,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,14 +358,14 @@
         "\n",
         "    return image_array"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9yoO2J3CA4UP",
-        "outputId": "c32c87bf-78be-432d-96ed-729afe397756",
+        "outputId": "74b80d32-4127-4f1d-a41b-6cdc36dacb72",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -413,7 +413,7 @@
         "names = load_classes(opt.names)\n",
         "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,11 +423,11 @@
             "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
             "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
             "remote: Total 9440 (delta 0), reused 2 (delta 0), pack-reused 9437\u001b[K\n",
-            "Receiving objects: 100% (9440/9440), 7.82 MiB | 30.34 MiB/s, done.\n",
+            "Receiving objects: 100% (9440/9440), 7.82 MiB | 3.25 MiB/s, done.\n",
             "Resolving deltas: 100% (6466/6466), done.\n",
-            "/content/yolov3\n",
+            "/content/yolov3/yolov3\n",
             "Model Summary: 225 layers, 6.29987e+07 parameters, 6.29987e+07 gradients\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.5s)\n"
+            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.4s)\n"
           ],
           "name": "stdout"
         }
@@ -478,7 +478,7 @@
         "\n",
         "    return drawing_array"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -513,7 +513,7 @@
         "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "    return drawing_bytes"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -529,7 +529,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FjpykLlBHsjv",
-        "outputId": "f0d5ca98-d24b-4959-9f53-b172921f474c",
+        "outputId": "126a35b3-a3ca-467c-92a7-14251057b5b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -540,12 +540,12 @@
         "drive.mount('/content/gdrive')\n",
         "!ls /content/gdrive/"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n",
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
             "'My Drive'\n"
           ],
           "name": "stdout"
@@ -565,7 +565,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4LC9pa2vrqX1",
-        "outputId": "5d60983b-01c2-4d17-f82f-1097708322c3",
+        "outputId": "d7401e9c-f38d-4320-879c-2aeb41c4f0ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -580,7 +580,7 @@
         "\n",
         "bucket_name = 'hanium_bucket_201007'"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,51 +604,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JsaqI0KjaY9_",
-        "outputId": "61683335-2d9a-4461-f7aa-60f5fa4f3cb4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!echo \"deb http://packages.cloud.google.com/apt gcsfuse-bionic main\" > /etc/apt/sources.list.d/gcsfuse.list\n",
-        "!curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -\n",
-        "!apt -qq update\n",
-        "!apt -qq install gcsfuse"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100   653  100   653    0     0  32650      0 --:--:-- --:--:-- --:--:-- 34368\n",
-            "OK\n",
-            "8 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
-            "The following NEW packages will be installed:\n",
-            "  gcsfuse\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 8 not upgraded.\n",
-            "Need to get 4,278 kB of archives.\n",
-            "After this operation, 12.8 MB of additional disk space will be used.\n",
-            "Selecting previously unselected package gcsfuse.\n",
-            "(Reading database ... 144617 files and directories currently installed.)\n",
-            "Preparing to unpack .../gcsfuse_0.30.0_amd64.deb ...\n",
-            "Unpacking gcsfuse (0.30.0) ...\n",
-            "Setting up gcsfuse (0.30.0) ...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "_pqB0d5WBK11",
-        "outputId": "fac82e79-da70-4caf-93e4-b01b065a462b",
+        "outputId": "51d75112-e844-42ac-f5d4-9a415bae4785",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 70
         }
       },
       "source": [
@@ -667,6 +627,7 @@
         "\n",
         "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
         "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/' + snow + '.avi', fourcc, 1.0, (512, 512))\n",
+        "filename = snow + '.avi'\n",
         "\n",
         "while True:\n",
         "    js_reply = take_photo(label_html, img_data)\n",
@@ -699,9 +660,9 @@
         "\n",
         "writer.release()\n",
         "cv2.destroyAllWindows()\n",
-        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/ gs://{bucket_name}"
+        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/{filename} gs://{bucket_name}"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,9 +803,9 @@
         {
           "output_type": "stream",
           "text": [
-            "Copying file:///content/gdrive/My Drive/record_files/2020_10_7_14_27_10.avi [Content-Type=video/x-msvideo]...\n",
-            "/ [1 files][ 78.2 KiB/ 78.2 KiB]                                                \n",
-            "Operation completed over 1 objects/78.2 KiB.                                     \n"
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_7_17_56_53.avi [Content-Type=video/x-msvideo]...\n",
+            "-\n",
+            "Operation completed over 1 objects/88.1 KiB.                                     \n"
           ],
           "name": "stdout"
         }
