Colaboratory를 통해 생성됨

--- a/project/edge_detection.ipynb
+++ b/project/edge_detection.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqTXGdc1HQJlr7aZ07GUrB",
+      "authorship_tag": "ABX9TyPVdytQ+WOy2/3Fmz/uaECZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,7 +289,7 @@
         "    filename = snow + '.png'\n",
         "    filename2 = snow + '(2).png'\n",
         "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/color_images/{filename} gs://{bucket_name}/record_files2/color_images/\n",
-        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/color_images/{filename2} gs://{bucket_name}/record_files2/gray_images/\n",
+        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/gray_images/{filename2} gs://{bucket_name}/record_files2/gray_images/\n",
         "\n",
         "writer.release()\n",
         "cv2.destroyAllWindows()\n",
@@ -344,8 +344,9 @@
         "    sobel_outimg = np.float32(sobel_outimg)\n",
         "    ed_name = image_folder2 + '/' + str(num) + '.png'\n",
         "    cv2.imwrite(ed_name, sobel_outimg)\n",
-        "    !gsutil cp -r /content/gdrive/My\\ Drive/record_files2/ed_images/{str(num)}.png gs://{bucket_name}/record_files2/ed_images/\n",
         "    num += 1\n",
+        "\n",
+        "!gsutil -m cp -r /content/gdrive/My\\ Drive/record_files2/ed_images/ gs://{bucket_name}/record_files2/\n",
         "\n",
         "images2 = [img for img in os.listdir(image_folder2) if img.endswith(\".png\")]\n",
         "frame = cv2.imread(os.path.join(image_folder2, images2[0]))\n",
