--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPD/hNX+dPchEXsSSg1IhOD",
+      "authorship_tag": "ABX9TyNFF8ofNmvH1kCfiai2GF6k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -529,49 +529,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "FjpykLlBHsjv",
-        "outputId": "126a35b3-a3ca-467c-92a7-14251057b5b4",
+        "outputId": "8f051588-2dc8-46ed-9791-af0586e69eff",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 87
         }
       },
       "source": [
         "from google.colab import drive\n",
         "from google.colab import files\n",
-        "drive.mount('/content/gdrive')\n",
-        "!ls /content/gdrive/"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
-            "'My Drive'\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QzbT6gmvH9_A"
-      },
-      "source": [
-        "Link with Google Drive"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4LC9pa2vrqX1",
-        "outputId": "d7401e9c-f38d-4320-879c-2aeb41c4f0ca",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
         "from google.colab import auth\n",
+        "\n",
+        "drive.mount('/content/gdrive')\n",
+        "!ls /content/gdrive/\n",
+        "\n",
         "auth.authenticate_user()\n",
         "\n",
         "project_id = 'vocal-oarlock-289106'\n",
@@ -585,6 +556,8 @@
         {
           "output_type": "stream",
           "text": [
+            "Mounted at /content/gdrive\n",
+            "'My Drive'\n",
             "Updated property [core/project].\n",
             "gs://hanium_bucket_201007/\n"
           ],
@@ -595,10 +568,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HC-wPbB5rr2K"
+        "id": "QzbT6gmvH9_A"
       },
       "source": [
-        "Link with GCP"
+        "Link with Google Drive and GCP"
       ]
     },
     {
