Colaboratory를 통해 생성됨

--- a/project/edge_detection.ipynb
+++ b/project/edge_detection.ipynb
@@ -3,17 +3,17 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "edge_detection.ipynb",
+      "name": "edge_detection.ipynb의 사본",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVdytQ+WOy2/3Fmz/uaECZ",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -227,19 +227,11 @@
       "source": [
         "from google.colab import drive\n",
         "from google.colab import files\n",
-        "drive.mount('/content/gdrive')\n",
-        "!ls /content/gdrive/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dfzSeeZGBRL1"
-      },
-      "source": [
         "from google.colab import auth\n",
+        "\n",
+        "drive.mount('/content/gdrive')\n",
+        "!ls /content/gdrive/\n",
+        "\n",
         "auth.authenticate_user()\n",
         "\n",
         "project_id = 'vocal-oarlock-289106'\n",
