Colaboratory를 통해 생성됨

--- a/project/yolov3_webcam.ipynb
+++ b/project/yolov3_webcam.ipynb
@@ -6,7 +6,7 @@
       "name": "yolov3_webcam.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFF8ofNmvH1kCfiai2GF6k",
+      "authorship_tag": "ABX9TyP2vMzTWIZO1ewAkcIGx/SF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,14 +174,14 @@
         "  data = eval_js('takePhoto(\"{}\", \"{}\")'.format(label, img_data))\n",
         "  return data"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MBHU-JdmAkcL",
-        "outputId": "a1120aa3-ff77-4d73-982d-98e5c96a7bf2",
+        "outputId": "6b0cc528-a9fd-4c46-e5a9-7414bec33494",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
@@ -199,7 +199,7 @@
         "  if not js_reply:\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,20 +358,21 @@
         "\n",
         "    return image_array"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "9yoO2J3CA4UP",
-        "outputId": "74b80d32-4127-4f1d-a41b-6cdc36dacb72",
+        "outputId": "63bea036-7883-4806-b1fe-bf1110c9c366",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         }
       },
       "source": [
-        "!git clone https://github.com/ultralytics/yolov3  # clone\n",
+        "!git clone https://github.com/ultralytics/yolov3.git  # clone\n",
         "%cd yolov3\n",
         "\n",
         "import argparse\n",
@@ -413,21 +414,21 @@
         "names = load_classes(opt.names)\n",
         "colors = [[random.randint(0, 255) for _ in range(3)] for _ in range(len(names))]"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'yolov3'...\n",
-            "remote: Enumerating objects: 3, done.\u001b[K\n",
-            "remote: Counting objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
-            "remote: Total 9440 (delta 0), reused 2 (delta 0), pack-reused 9437\u001b[K\n",
-            "Receiving objects: 100% (9440/9440), 7.82 MiB | 3.25 MiB/s, done.\n",
-            "Resolving deltas: 100% (6466/6466), done.\n",
-            "/content/yolov3/yolov3\n",
+            "remote: Enumerating objects: 5, done.\u001b[K\n",
+            "remote: Counting objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 9445 (delta 0), reused 0 (delta 0), pack-reused 9440\u001b[K\n",
+            "Receiving objects: 100% (9445/9445), 7.82 MiB | 1.40 MiB/s, done.\n",
+            "Resolving deltas: 100% (6471/6471), done.\n",
+            "/content/yolov3/yolov3/yolov3\n",
             "Model Summary: 225 layers, 6.29987e+07 parameters, 6.29987e+07 gradients\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (2.4s)\n"
+            "Downloading https://drive.google.com/uc?export=download&id=1UcR-zVoMs7DH5dj3N1bswkiQTA4dmKF4 as weights/yolov3-spp-ultralytics.pt... Done (4.5s)\n"
           ],
           "name": "stdout"
         }
@@ -473,12 +474,13 @@
         "        for *xyxy, conf, cls in det:\n",
         "            label = '%s %.2f' % (names[int(cls)], conf)\n",
         "            plot_one_box(xyxy, drawing_array, label=label, color=colors[int(cls)])\n",
+        "            print(names[int(cls)])\n",
         "\n",
         "    drawing_array[:,:,3] = (drawing_array.max(axis = 2) > 0 ).astype(int) * 255\n",
         "\n",
         "    return drawing_array"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -513,7 +515,7 @@
         "    drawing_bytes = 'data:image/png;base64,{}'.format((str(base64.b64encode(iobuf.getvalue()), 'utf-8')))\n",
         "    return drawing_bytes"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -529,7 +531,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "FjpykLlBHsjv",
-        "outputId": "8f051588-2dc8-46ed-9791-af0586e69eff",
+        "outputId": "b8a9ce2d-127f-4796-ade9-3e5e1c4c7f20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -539,6 +541,8 @@
         "from google.colab import drive\n",
         "from google.colab import files\n",
         "from google.colab import auth\n",
+        "from google.cloud import storage\n",
+        "from pydrive.drive import GoogleDrive\n",
         "\n",
         "drive.mount('/content/gdrive')\n",
         "!ls /content/gdrive/\n",
@@ -551,12 +555,12 @@
         "\n",
         "bucket_name = 'hanium_bucket_201007'"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n",
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
             "'My Drive'\n",
             "Updated property [core/project].\n",
             "gs://hanium_bucket_201007/\n"
@@ -578,10 +582,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_pqB0d5WBK11",
-        "outputId": "51d75112-e844-42ac-f5d4-9a415bae4785",
+        "outputId": "79a83ca0-ca1e-4a47-81f8-cf20d2f825d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 545
         }
       },
       "source": [
@@ -593,14 +597,29 @@
         "start_input()\n",
         "label_html = 'Capturing...'\n",
         "img_data = ''\n",
-        "count = 0 \n",
+        "count = 0\n",
         "\n",
         "now = datetime.now()\n",
         "snow = str(now.year) + '_' + str(now.month) + '_' + str(now.day) + '_' + str(now.hour + 9) + '_' + str(now.minute) + '_' + str(now.second)\n",
+        "fsnow = str(now.year) + '_' + str(now.month) + '_' + str(now.day)\n",
         "\n",
         "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
-        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/' + snow + '.avi', fourcc, 1.0, (512, 512))\n",
+        "writer = cv2.VideoWriter('/content/gdrive/My Drive/record_files/' + fsnow + '/' + snow + '.avi', fourcc, 1.0, (512, 512))\n",
         "filename = snow + '.avi'\n",
+        "\n",
+        "path = '/content/gdrive/My Drive/record_files/' + fsnow + '/'\n",
+        "isFile = os.path.isfile(path)\n",
+        "\n",
+        "if isFile:\n",
+        "    os.mkdir(path)\n",
+        "\n",
+        "name = fsnow + '/'\n",
+        "storage_client = storage.Client(project_id)\n",
+        "bucket = storage_client.bucket(bucket_name)\n",
+        "stats = storage.Blob(bucket=bucket, name=name).exists(storage_client)\n",
+        "\n",
+        "if not stats:\n",
+        "    !gsutil mb gs://{bucket_name}/record_files/{fsnow}/\n",
         "\n",
         "while True:\n",
         "    js_reply = take_photo(label_html, img_data)\n",
@@ -628,14 +647,13 @@
         "         image[x[i],y[i]] = (0, 0, 0)\n",
         "\n",
         "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-        "\n",
         "    writer.write(image + drawing_array)\n",
         "\n",
         "writer.release()\n",
         "cv2.destroyAllWindows()\n",
-        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/{filename} gs://{bucket_name}"
+        "!gsutil cp -r /content/gdrive/My\\ Drive/record_files/{fsnow}/{filename} gs://{bucket_name}/record_files/{fsnow}/"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -776,9 +794,36 @@
         {
           "output_type": "stream",
           "text": [
-            "Copying file:///content/gdrive/My Drive/record_files/2020_10_7_17_56_53.avi [Content-Type=video/x-msvideo]...\n",
-            "-\n",
-            "Operation completed over 1 objects/88.1 KiB.                                     \n"
+            "CommandException: The mb command requires a URL that specifies a bucket.\n",
+            "\"gs://hanium_bucket_201007/record_files/2020_10_13/\" is not valid.\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "teddy bear\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "clock\n",
+            "person\n",
+            "Copying file:///content/gdrive/My Drive/record_files/2020_10_13/2020_10_13_14_11_17.avi [Content-Type=video/x-msvideo]...\n",
+            "/ [1 files][155.1 KiB/155.1 KiB]                                                \n",
+            "Operation completed over 1 objects/155.1 KiB.                                    \n"
           ],
           "name": "stdout"
         }
